--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./assets/css/inicio.min.css">
 </head>
 <body>
-    
+    <main>
+        <section>
+            
+        </section>
+    </main>
 </body>
 </html>
