--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,19 @@
 <body>
     <main>
         <section>
-             
+             <h2>Encabezado h2</h2>
+             <article class="gor_art01">
+                <div>
+                    <img src="https://dummyimage.com/500x500" alt="texto alternativo de la imagen por si no carga" title="Título de la imagen con keywords">
+                    <div>
+                        <h3>Encabezado h3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae ipsam voluptatibus exercitationem vel libero incidunt minus! Exercitationem id soluta quae ex. Rerum iste nesciunt quisquam consequatur et quidem quis quas?</p>
+                        <a href="#">CTA</a>
+                    </div>
+                </div>
+                <cite><span>"</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, molestias necessitatibus suscipit dolores corporis esse.</cite>
+                <img src="https://dummyimage.com/500x500" alt="texto alternativo de la imagen por si no carga" title="Título de la imagen con keywords">
+             </article>
         </section>
     </main>
 </body>
