--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <div>
                         <h3>Encabezado h3</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae ipsam voluptatibus exercitationem vel libero incidunt minus! Exercitationem id soluta quae ex. Rerum iste nesciunt quisquam consequatur et quidem quis quas?</p>
-                        <a href="#">CTA</a>
+                        <a href="#" class="boton">CTA</a>
                     </div>
                 </div>
                 <cite><span>"</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, molestias necessitatibus suscipit dolores corporis esse.</cite>
