--- a/index.html
+++ b/index.html
@@ -5,24 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="./assets/css/inicio.min.css">
+    <script type="module" src="./assets/js/app.js"></script>
 </head>
 <body>
     <main>
         <section>
-             <h2>Encabezado h2</h2>
+             <h2 class="lad_der_efect">Encabezado h2</h2>
              <article class="gor_art01">
                 <div>
-                    <img src="https://dummyimage.com/500x500" alt="texto alternativo de la imagen por si no carga" title="Título de la imagen con keywords">
+                    <img src="https://dummyimage.com/500x500" alt="texto alternativo de la imagen por si no carga" title="Título de la imagen con keywords" class="lad_izd_efect">
                     <div>
-                        <h3>Encabezado h3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae ipsam voluptatibus exercitationem vel libero incidunt minus! Exercitationem id soluta quae ex. Rerum iste nesciunt quisquam consequatur et quidem quis quas?</p>
-                        <a href="#" class="boton">CTA</a>
+                        <h3 class="lad_izd_efect">Encabezado h3</h3>
+                        <p class="lad_der_efect">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae ipsam voluptatibus exercitationem vel libero incidunt minus! Exercitationem id soluta quae ex. Rerum iste nesciunt quisquam consequatur et quidem quis quas?</p>
+                        <a href="#" class="boton boton lad_izd_efect"">CTA</a>
                     </div>
                 </div>
-                <cite><span>"</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, molestias necessitatibus suscipit dolores corporis esse.</cite>
+                <cite class="lad_izd_efect"><span>"</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, molestias necessitatibus suscipit dolores corporis esse.</cite>
                 <img src="https://dummyimage.com/500x500" alt="texto alternativo de la imagen por si no carga" title="Título de la imagen con keywords">
              </article>
         </section>
+
+        <section>
+            <h2>Encabezado h2</h2>
+            <article class="gor_art01">
+            <div>
+                <img src="https://dummyimage.com/500x500" alt="texto alternativo de la imagen por si no carga" title="Título de la imagen con keywords" class="lad_izd_efect">
+                <div>
+                    <h3 class="lad_izd_efect">Encabezado h3</h3>
+                    <p class="lad_der_efect">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae ipsam voluptatibus exercitationem vel libero incidunt minus! Exercitationem id soluta quae ex. Rerum iste nesciunt quisquam consequatur et quidem quis quas?</p>
+                    <a href="#" class="boton lad_izd_efect">CTA</a>
+                </div>
+            </div>
+            <cite class="lad_izd_efect"><span>"</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, molestias necessitatibus suscipit dolores corporis esse.</cite>
+            <img src="https://dummyimage.com/500x500" alt="texto alternativo de la imagen por si no carga" title="Título de la imagen con keywords">
+            </article>
+        </section>
+
+        <section>
+            <h2>Encabezado h2</h2>
+            <article class="gor_art01">
+            <div>
+                <img src="https://dummyimage.com/500x500" alt="texto alternativo de la imagen por si no carga" title="Título de la imagen con keywords" class="lad_izd_efect">
+                <div>
+                    <h3 class="lad_izd_efect">Encabezado h3</h3>
+                    <p class="lad_der_efect">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae ipsam voluptatibus exercitationem vel libero incidunt minus! Exercitationem id soluta quae ex. Rerum iste nesciunt quisquam consequatur et quidem quis quas?</p>
+                    <a href="#" class="boton boton lad_izd_efect">CTA</a>
+                </div>
+            </div>
+            <cite class="lad_izd_efect"><span>"</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, molestias necessitatibus suscipit dolores corporis esse.</cite>
+            <img src="https://dummyimage.com/500x500" alt="texto alternativo de la imagen por si no carga" title="Título de la imagen con keywords">
+            </article>
+        </section>
+        
     </main>
 </body>
 </html>
